# abbott-deep-learning-algebra

./: .gitignore  CITATION.cff  README.md  lake-manifest.json  lakefile.lean
HeytingLean/Bridge/: Abbott.lean
HeytingLean/Bridge/Abbott/: DeepLearningAlgebra.lean  ONNX.lean
HeytingLean/Bridge/Abbott/DeepLearningAlgebra/: ArrayBroadcasted.lean  AxisStride.lean  Broadcasting.lean  Categorical.lean  Elemental.lean  Laws.lean  ProductCategory.lean  Remapping.lean  Syntax.lean  Yoneda.lean
HeytingLean/Bridge/Abbott/DeepLearningAlgebra/Categorical/: Array.lean  Broadcast.lean  Fox.lean  Interpretation.lean  Monoidal.lean  Product.lean  Stride.lean  Yoneda.lean
HeytingLean/Bridge/Abbott/ONNX/: Coverage.lean  Shape.lean  Syntax.lean  TensorValue.lean  Types.lean
HeytingLean/Bridge/Abbott/ONNX/Eval/: Core.lean  (+3 more)
HeytingLean/Tests/Bridge/: Abbott.lean
HeytingLean/Tests/Bridge/Abbott/: BroadcastingSanity.lean  Categorical.lean  ConvolutionSanity.lean  DeepLearningAlgebraSanity.lean  FoxSanity.lean  ONNX.lean  YonedaSanity.lean
projects/onnx_abbott_verifier/: README.md  pyproject.toml
projects/onnx_abbott_verifier/artifacts/: coverage_matrix.json
projects/onnx_abbott_verifier/onnx_abbott_verifier.egg-info/: SOURCES.txt
projects/onnx_abbott_verifier/python/: coverage_ledger.py  lower_from_onnx.py  optimize.py  ort_diff.py  sample_graphs.py  schema.py
projects/onnx_abbott_verifier/tests/: test_coverage_ledger.py  test_lower_from_onnx.py  test_ort_diff.py
python/: __init__.py  examples.py  json_schema.py  torch_lowering.py  uid_config.py
ts/: diagram_schema.ts
(+23 files in other folders)
