[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-abbott-verifier"
version = "0.1.0"
description = "Canonical ONNX fragment lowering and Abbott-style coverage utilities"
requires-python = ">=3.11"
dependencies = ["numpy", "onnx", "onnxruntime"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
